samples/_failures_safe/1761631263_9b60cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7ffe018.c: In function ‘main’:
./samples/SAFE/__tmp_b7ffe018.c:153:5: error: expected declaration or statement at end of input
  153 |     printf("Compressed data (hex): ");
      |     ^~~~~~
